fix(🐛): android support base64